# data-product-manager

./: Dockerfile  README.md  pyproject.toml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
k8s/: clusterRole.yaml
src/: config.ini  main.py
tests/: input.json  mapping_file.rml.ttl
