[tool.poetry]
name = "data-product-manager"
version = "0.1.0"
description = ""
authors = ["LuciaCabanillasRodriguez <lucia.cabanillasrodriguez@telefonica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.104.1"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
requests = "^2.31.0"
urllib3 = "1.26.7"
croniter = "^2.0.1"
kubernetes = "^28.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
